test_regress/t/t_property_sexpr_bad.out
%Error-UNSUPPORTED: t/t_property_sexpr_bad.v:20:39: Unexpected not in sequence expression context
   20 |   assert property (@(posedge clk) ##1 not val);
      |                                       ^~~
                    ... For error description see https://verilator.org/warn/UNSUPPORTED?v=latest
%Error: Exiting due to
